add divider component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <app-container>
   <app-header></app-header>
+  <app-divider>
+    A
+  </app-divider>
+  <app-divider>
+    B
+  </app-divider>
+  <app-divider>
+    C
+  </app-divider>
 </app-container>
