--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     background: linear-gradient(180deg, #3D8BFD 0%, #E7F1FF 100%);
