--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <app-container>
-  <app-header></app-header>
-  <app-divider>
-    A
-  </app-divider>
-  <app-divider>
-    B
-  </app-divider>
-  <app-divider>
-    C
-  </app-divider>
+  <app-header></app-header>  
+    @for (letter of alphabet; track letter) {
+      <app-divider>
+        {{ letter }}
+      </app-divider>
+      
+        @for (contact of filterContactsByLetter(letter); track contact.id) {
+          <app-contact [name]="contact.nome" [phone]="contact.telefone"></app-contact>
+        }
+    }
 </app-container>
