--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,12 +1,12 @@
-contact ul {
+.contact ul {
     display: flex;
     padding: 0;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
-contact ul li {
+.contact ul li {
     list-style: none;
     color: #212529;
     font-family: 'Montserrat', sans-serif;
@@ -16,7 +16,7 @@ contact ul li {
     line-height: 150%;
 }
 
-contact ul li button {
+.contact ul li button {
     background-color: transparent;
     border: none;
     cursor: pointer;
