add filter feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <app-container>
   <app-header></app-header>  
+    <input 
+      type="search" 
+      placeholder="Digite para buscar..." 
+      [(ngModel)]="filterByText"
+    />
+
     @for (letter of alphabet; track letter) {
       <app-divider>
         {{ letter }}
