--- a/src/app/pages/contact-form/contact-form.component.html
+++ b/src/app/pages/contact-form/contact-form.component.html
@@ -12,12 +12,31 @@
     <form [formGroup]="contactForm" (ngSubmit)="saveContact()">
         <label for="name">Nome:</label>
         <input type="text" id="name" formControlName="name" placeholder="Digite o nome do contato">
-
+        @if(contactForm.get('name')?.errors && contactForm.get('name')?.touched) {
+            <div class="error-message">
+                Campo obrigatório!
+            </div>
+        }
         <label for="phone">Telefone:</label>
         <input type="text" id="phone" formControlName="phone" placeholder="Digite o telefone do contato">
+        @if(contactForm.get('phone')?.errors && contactForm.get('phone')?.touched) {
+            <div class="error-message">
+                Campo obrigatório!
+            </div>
+        }
 
         <label for="email">E-mail:</label>
         <input type="email" id="email" formControlName="email" placeholder="Digite o e-mail do contato">
+        @if(contactForm.get('email')?.errors?.['required'] && contactForm.get('email')?.touched) {
+            <div class="error-message">
+                Campo obrigatório!
+            </div>
+        }
+        @if(contactForm.get('email')?.errors?.['email'] && contactForm.get('email')?.touched) {
+            <div class="error-message">
+                E-mail inválido!
+            </div>
+        }
 
         <app-divider></app-divider>
 
