add contact-list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,1 @@
-<app-contact-form></app-contact-form>
-
-<app-container>
-  <app-header></app-header>  
-    <input 
-      type="search" 
-      placeholder="Digite para buscar..." 
-      [(ngModel)]="filterByText"
-    />
-
-    @for (letter of alphabet; track letter) {
-      <app-divider>
-        {{ letter }}
-      </app-divider>
-      
-        @for (contact of filterContactsByLetter(letter); track contact.id) {
-          <app-contact [name]="contact.nome" [phone]="contact.telefone"></app-contact>
-        }
-    }
-</app-container>
+<router-outlet></router-outlet>
