--- a/src/app/pages/contact-form/contact-form.component.css
+++ b/src/app/pages/contact-form/contact-form.component.css
@@ -14,7 +14,7 @@ header .link-header div {
   align-self: flex-start;
 }
 
-header .link-header img.seta {
+header .link-header img.arrow {
   margin: 0 8px;
 }
 
