--- a/src/app/pages/contact-form/contact-form.component.html
+++ b/src/app/pages/contact-form/contact-form.component.html
@@ -2,6 +2,12 @@
     <header>
         <section class="link-header">
             <img src="assets/logo.png" alt="Logo">
+            <div>
+                <button>
+                <img class="arrow" src="assets/arrow-left.png" alt="">
+                <a routerLink="/list">Voltar</a>
+                </button>
+            </div>
         </section>
         <section class="contact-header">
             <img src="assets/add-contact.png" alt="Add Contact">
