adjustments on save button and layout

--- a/src/app/pages/contact-form/contact-form.component.html
+++ b/src/app/pages/contact-form/contact-form.component.html
@@ -3,9 +3,9 @@
         <section class="link-header">
             <img src="assets/logo.png" alt="Logo">
             <div>
-                <button>
-                <img class="arrow" src="assets/arrow-left.png" alt="">
-                <a routerLink="/list">Voltar</a>
+                <button routerLink="/list">
+                    <img class="arrow" src="assets/arrow-left.png" alt="">
+                    <a>Voltar</a>
                 </button>
             </div>
         </section>
