--- a/src/app/pages/contact-form/contact-form.component.css
+++ b/src/app/pages/contact-form/contact-form.component.css
@@ -14,6 +14,10 @@ header .link-header div {
   align-self: flex-start;
 }
 
+header .link-header div button{
+  cursor: pointer;
+}
+
 header .link-header img.arrow {
   margin: 0 8px;
 }
