--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -19,7 +19,7 @@
       </app-divider>
       
         @for (contact of filterContactsByLetter(letter); track contact.id) {
-          <app-contact [name]="contact.nome" [phone]="contact.telefone"></app-contact>
+          <app-contact [name]="contact.name" [phone]="contact.phone"></app-contact>
         }
     }
 </app-container>
