add route perfil-contato

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -8,7 +8,7 @@
             <button>
                 <img src="assets/pencil-square.png" alt="Pencil">                
             </button>        
-            <button>
+            <button [routerLink]="['/perfil-contato', id]">
                 <img src="assets/trash.png" alt="Trash">                
             </button>
         </li>
