add method deleteContact

--- a/src/app/pages/contact-profile/contact-profile.component.html
+++ b/src/app/pages/contact-profile/contact-profile.component.html
@@ -38,7 +38,7 @@
       <li>{{ contact.socialMedia }}</li>
     </ul>
     <div class="buttons">
-      <button class="delete-button">
+      <button (click)="deleteContact()" class="delete-button">
         Excluir contato
       </button>
       <button class="edit-button">
