add contact image

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,5 +1,6 @@
 <section class="contact">
     <ul>
+        <img [src]="avatar" alt="avatar" class="avatar" [routerLink]="['/contact-profile', id]">
         <li>
             <strong>{{ name }}</strong>
         </li>        
