--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -22,7 +22,9 @@
           <app-contact 
             [name]="contact.name" 
             [phone]="contact.phone"
-            [id]="contact.id!">
+            [id]="contact.id!"
+            [avatar]="contact.avatar"
+          >
           </app-contact>
         }
     }
