--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -21,3 +21,13 @@
     border: none;
     cursor: pointer;
 }
+
+.contact ul img {
+  cursor: pointer;
+}
+
+.contact .avatar {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
