--- a/src/app/pages/contact-profile/contact-profile.component.css
+++ b/src/app/pages/contact-profile/contact-profile.component.css
@@ -63,8 +63,7 @@ h1 {
 
 .profile {
   background: #e7f1ff;
-  width: 416px;
-  height: 548px;
+  width: 416px;  
   padding: 24px, 16px;
   border-radius: 16px;
 }
@@ -97,6 +96,7 @@ h1 {
   justify-content: space-between;
   margin: 0 16px;
   gap: 16px;
+  padding-bottom: 32px;
 }
 
 .delete-button,
@@ -123,3 +123,28 @@ h1 {
   background-color: #0d6efd;
   cursor: pointer;
 }
+
+.image-profile {
+    display: flex;
+    gap: 12px;
+    align-items: center;
+    padding-top: 12px;
+    padding-left: 24px;
+    margin-top: 36px;
+  }
+
+  .image-profile img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+
+  h2 {
+    font-family: 'Montserrat';
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 33px;
+    color: #0D6EFD;
+    padding-left: 12px;
+  }
+
