--- a/src/app/pages/contact-profile/contact-profile.component.html
+++ b/src/app/pages/contact-profile/contact-profile.component.html
@@ -15,35 +15,40 @@
         </section>
     </header>
     <section class="profile">
-    <ul>
-      <li>
-        <i class="material-icons">call</i>
-        <strong>Telefone</strong>
-      </li>
-      <li>{{ contact.phone }}</li>
-      <li>
-        <i class="material-icons">mail</i>
-        <strong>Email</strong>
-      </li>
-      <li>{{ contact.email }}</li>
-      <li>
-        <i class="material-icons">event_available</i>
-        <strong>Data de nascimento</strong>
-      </li>
-      <li>{{ contact.birthday }}</li>
-      <li>
-        <i class="material-icons">language</i>
-        <strong>Redes sociais</strong>
-      </li>
-      <li>{{ contact.socialMedia }}</li>
-    </ul>
-    <div class="buttons">
-      <button (click)="deleteContact()" class="delete-button">
-        Excluir contato
-      </button>
-      <button [routerLink]="['/form', contact.id]" class="edit-button">
-        Editar
-      </button>
-    </div>
+      <div class="image-profile">
+        <img [src]="contact.avatar" alt="Avatar">
+        <h2><strong>{{ contact.name }}</strong></h2>
+      </div>
+      <app-divider></app-divider>
+      <ul>
+        <li>
+          <i class="material-icons">call</i>
+          <strong>Telefone</strong>
+        </li>
+        <li>{{ contact.phone }}</li>
+        <li>
+          <i class="material-icons">mail</i>
+          <strong>Email</strong>
+        </li>
+        <li>{{ contact.email }}</li>
+        <li>
+          <i class="material-icons">event_available</i>
+          <strong>Data de nascimento</strong>
+        </li>
+        <li>{{ contact.birthday }}</li>
+        <li>
+          <i class="material-icons">language</i>
+          <strong>Redes sociais</strong>
+        </li>
+        <li>{{ contact.socialMedia }}</li>
+      </ul>
+      <div class="buttons">
+        <button (click)="deleteContact()" class="delete-button">
+          Excluir contato
+        </button>
+        <button [routerLink]="['/form', contact.id]" class="edit-button">
+          Editar
+        </button>
+      </div>
   </section>
 </app-container>
