--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -8,7 +8,7 @@
 
     <section class="add-contact">
         <button routerLink="/form">
-            <img src="../../../assets/plus.png" alt="Plus">
+            <img src="../../../assets/plus.png" alt="Plus Icon">
             <span>Adicionar contato</span>
         </button>
     </section>
