--- a/src/app/pages/contact-form/contact-form.component.html
+++ b/src/app/pages/contact-form/contact-form.component.html
@@ -29,31 +29,15 @@
         }
         <label for="name">Nome:</label>
         <input type="text" id="name" formControlName="name" placeholder="Digite o nome do contato">
-        @if(contactForm.get('name')?.errors && contactForm.get('name')?.touched) {
-            <div class="error-message">
-                Campo obrigatório!
-            </div>
-        }
+        <app-error-message [control]="getControl('name')"></app-error-message>
+        
         <label for="phone">Telefone:</label>
         <input type="text" id="phone" formControlName="phone" placeholder="Digite o telefone do contato">
-        @if(contactForm.get('phone')?.errors && contactForm.get('phone')?.touched) {
-            <div class="error-message">
-                Campo obrigatório!
-            </div>
-        }
+        <app-error-message [control]="getControl('phone')"></app-error-message>
 
         <label for="email">E-mail:</label>
         <input type="email" id="email" formControlName="email" placeholder="Digite o e-mail do contato">
-        @if(contactForm.get('email')?.errors?.['required'] && contactForm.get('email')?.touched) {
-            <div class="error-message">
-                Campo obrigatório!
-            </div>
-        }
-        @if(contactForm.get('email')?.errors?.['email'] && contactForm.get('email')?.touched) {
-            <div class="error-message">
-                E-mail inválido!
-            </div>
-        }
+        <app-error-message [control]="getControl('email')"></app-error-message>
 
         <app-divider></app-divider>
 
