--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,13 @@
 <header class="header">
     <img src="assets/logo.png" alt="Logo" class="logo">
-    <img src="assets/banner.png" alt="Banner" class="banner">
-    <h1 class="title">Organize, <span>conecte,</span> simplifique!</h1>
+    @if(!isHome) {
+        <div class="link">
+            <button routerLink="/list">
+                <img class="arrow" src="assets/arrow-left.png" alt="">
+                <a>Voltar</a>
+            </button>
+        </div>
+    }
+    <img [src]="bannerSrc" alt="Banner" class="banner">
+    <h1 [innerText]="title" class="title"></h1>
 </header>
