--- a/src/app/pages/contact-list/contact-list.component.html
+++ b/src/app/pages/contact-list/contact-list.component.html
@@ -1,5 +1,5 @@
 <app-container>
-  <app-header></app-header>  
+  <app-header [isHome]="true" [title]="'Organize, conecte, simplifique!'" [bannerSrc]="'assets/banner.png'"></app-header>  
     <input 
       type="search" 
       placeholder="Digite para buscar..." 
