--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -22,3 +22,25 @@
 .header .title span {
     color: #FD9843;
 }
+
+.header a {
+  text-decoration: none;
+  font-family: 'Montserrat';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0px;
+  color: #0D6EFD;
+  cursor: pointer;
+}
+
+.header .link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-self: flex-start;
+}
+
+.header .arrow {
+  margin: 0 8px;
+}
